--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,15 @@
   );
 }
 
+.line {
+  top:95px;
+  height: 2px;
+  background-color: black;
+  width: 1000%;
+  position: fixed;
+  left: -100px;
+}
+
 body {
   font-family: "Open Sans", sans-serif;
   color: #585a61;
@@ -130,7 +139,7 @@ h1, h2, h3, h4, h5, h6 {
   justify-content: space-between;
   padding: 10px 0 10px 30px;
   font-family: "Raleway", sans-serif;
-  font-size: 15px;
+  font-size: 20px;
   font-weight: bolder;
   color: #47536e;
   white-space: nowrap;
@@ -335,8 +344,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 #hero h2 {
   color: #515f7d;
-  margin-bottom: 50px;
-  font-size: 20px;
+  font-size: 30px;
 }
 #hero .download-btn {
   font-family: "Raleway", sans-serif;
@@ -397,7 +405,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .img-fluid {
-  max-width: 40%;
+  max-width: 60%;
   height: auto;
   margin-left: 100px;
 }
