--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,20 @@
   );
 }
 
+body::-webkit-scrollbar {
+  width: 12px;               /* ширина всей полосы прокрутки */
+}
+
+body::-webkit-scrollbar-track {
+  background: white;        /* цвет зоны отслеживания */
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: gray;    /* цвет бегунка */
+  border-radius: 20px;       /* округлось бегунка */
+  border: 3px solid white;  /* отступ вокруг бегунка */
+}
+
 /* width */
 ::-webkit-scrollbar {
   width: 4px;
